Segundo commit: -CRUD 100% -Mensagens de Retorno OK -Botões de fechar o ajuda OK -Adicionado segunda verificação ao deletar e alterar os registros...

--- a/web/acessoAluno.xhtml
+++ b/web/acessoAluno.xhtml
@@ -12,6 +12,9 @@
           crossorigin="anonymous"></link>
 
     <title>Menu Aluno | BiblioTec</title>
+
+    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+
     <meta charset="utf-8">
         <style>
             .popup {
@@ -42,12 +45,12 @@
 </h:head>
 <h:body>
     <div id="popup" class="popup">
-        <p>Bem vindo ao Sistema BiblioTec!
+        <p>Olá,
             <a href="#" onClick="document.getElementById('popup').style.display = 'none';">[Fechar]</a>
             <b></b>
-            <p>
+
                 COLOCAR A AJUDA DO ALUNO AQUI
-            </p>
+            
             <b></b>
 
         </p>
