--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -12,6 +12,9 @@
           crossorigin="anonymous"></link>
 
     <title>Menu Balconista | BiblioTec</title>
+
+    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+
     <meta charset="utf-8">
         <style>
             .popup {
@@ -42,7 +45,7 @@
 </h:head>
 <h:body>
     <div id="popup" class="popup">
-        <p>Bem vindo ao Sistema BiblioTec!
+        <p>Olá,
             <a href="#" onClick="document.getElementById('popup').style.display = 'none';">[Fechar]</a>
             <b></b>
             <p>
