--- a/web/consultarAcervo.xhtml
+++ b/web/consultarAcervo.xhtml
@@ -11,29 +11,120 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous"></link>
 
-    <title>Consultar Acervo | BiblioTec</title>
+    <title> Consultar Acervo | BiblioTec</title>
+
+    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
+
+    <meta charset="utf-8">
+        <style>
+            .popup {
+                position: fixed;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                width: 500px;
+                height: 135px;
+                padding: 15px;
+                border: solid 1pX black;
+                background: white;
+                display: none;
+            }
+
+            .fechar {
+                position: absolute;
+                top: -93px;
+                bottom: 0;
+                left: 0;
+                right: -460px;
+                margin: auto;
+                width: 25px;
+                height: 25px;
+                border: black 1px solid;
+                border-radius: 3px;
+                background: gray;
+                color: blue;
+            }
+        </style>
+    </meta>
+
+    <script type="text/javascript">
+        function abrir() {
+            document.getElementById('popup').style.display = 'block';
+        }
+        function fechar() {
+            document.getElementById('popup').style.display = 'none';
+        }
+    </script>
 </h:head>
 <h:body>
-    <i><h1 align="center"> BiblioTec FAZER BOTAO AJUDA TITULO OBRIGATORIO</h1></i>
+    <style type="text/css">
+        .ui-datatable input {
+            box-sizing: border-box;
+            width: 100%;
+            -webkit-box-shadow: none;
+            box-shadow: none !important;
+        }
+    </style>
+
+    <div id="popup" class="popup">
+        <p>Olá,
+            <button class="fechar" onclick="fechar()">x</button>
+            <b></b>
+            <p>
+                Para consultar nossos livros, basta preencher o título e clicar em Consultar, caso contrário nosso sistema listará todos os livros do acervo.
+            </p>
+        </p>
+    </div>
+    <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
-        <p:menuitem value="HOME" url="index.xhtml"></p:menuitem>
+        <p:menuitem value="INÍCIO" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
-    <section alig="center" class="row">
+    <section alig="center" class="">
         <div class="jumbotron">
             <h:form id="telaConsultaVisitante">
                 <div class="form-group">
                     <h:outputLabel value="Título"/>
-                    <h:inputText value="#{livroBean.livro.titulo}" class="form-control" required="true"></h:inputText>
-                    <h:outputLabel value="Autor"/>
-                    <h:inputText value="#{livroBean.livro.autor}" class="form-control"></h:inputText>
-                    <h:outputLabel value="Editora"/>
-                    <h:inputText value="#{livroBean.livro.editora}" class="form-control"></h:inputText>
+                    <h:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false"></h:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                     action="#{livroBean.realizarConsultaLivro}" url="index.xhtml"></h:commandButton>
+                                     action="#{livroBean.realizarConsultaLivro}" url="index.home.xhtml"></h:commandButton>
                 </div>
             </h:form>
+            <section alig="center" class="row">
+                <div class="form-group">
+                    <p:dataTable value="#{livroBean.realizarConsultaLivro()}" var="livro" border="9" rendered="true"
+                                 title="Relação de Livros.">
+
+                        <f:facet name="header">
+                            Relação de Livros
+                        </f:facet>
+
+                        <p:column>
+                            <f:facet name="header">Título</f:facet>
+                            #{livro.titulo}
+                        </p:column><p:column>
+                            <f:facet name="header">Autor(a)</f:facet>
+                            #{livro.autor}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Editora</f:facet>
+                            #{livro.editora}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Ano Lançamento</f:facet>
+                            #{livro.anolancamento}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Volume</f:facet>
+                            #{livro.volume}
+                        </p:column>
+                    </p:dataTable>
+                </div>
+            </section>
         </div>
     </section>
 </h:body>
