--- a/web/gestaoBibliotecas.xhtml
+++ b/web/gestaoBibliotecas.xhtml
@@ -9,9 +9,11 @@
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous"></link>
+          crossorigin="anonymous"/>
 
-    <title>BiblioTec v1.0</title>
+    <title>BiblioTec - Gestão de Bibliotecas</title>
+
+    <link href="icone.png" rel="shortcut icon" type="image/x-png"></link>
 
     <meta charset="utf-8">
         <style>
@@ -23,11 +25,26 @@
                 right: 0;
                 margin: auto;
                 width: 500px;
-                height: 260px;
+                height: 240px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
                 display: none;
+            }
+
+            .fechar {
+                position: absolute;
+                top: -200px;
+                bottom: 0;
+                left: 0;
+                right: -460px;
+                margin: auto;
+                width: 25px;
+                height: 25px;
+                border: black 1px solid;
+                border-radius: 3px;
+                background: gray;
+                color: blue;
             }
         </style>
     </meta>
@@ -44,10 +61,10 @@
 <h:body>
     <div id="popup" class="popup">
         <p>Bem vindo ao Sistema BiblioTec!
-            <a href="#" onClick="document.getElementById('popup').style.display = 'none';">[Fechar]</a>
+            <button class="fechar" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Se você é um visitante, poderá clicar em Consultar Acervo para saber quais obras temos em nossa instituição.
+                Se você é um visitante, poderá clicar em Acervo para saber quais obras temos em nossa instituição.
             </p>
             <b></b>
             <p>
@@ -62,7 +79,7 @@
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar>
-        <p:menuitem value="CONSULTAR ACERVO" url="consultarAcervo.xhtml"></p:menuitem>
+        <p:menuitem value="ACERVO" url="consultarAcervo.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
     <section alig="center" class="row">
@@ -72,14 +89,11 @@
                 <h5 align="center">Acesso</h5><br></br>
                 <div class="form-group">
                     <h:outputLabel value="Usuário"/><br></br>
-                    <h:inputText value="#{loginBean.user.usuario}" class="form-control" required="true"></h:inputText>
-                    <!--<input type="text" name="usuario" value="#{loginBean.usuario}"></input><br></br>-->
+                    <p:inputText value="#{loginBean.user.usuario}" class="form-control" required="true"/>
                 </div>
                 <div class="form-group">
-
                     <h:outputLabel value="Senha"/><br></br>
-                    <h:inputText value="#{loginBean.user.senha}" required="true" class="form-control"></h:inputText>
-                    <!--<input type="password" name="senha" class="form-control" value="#{loginBean.senha}" minlength="8"></input>-->
+                    <p:password value="#{loginBean.user.senha}" required="true" class="form-control"/>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Login" class="btn btn-block btn-primary"
@@ -93,7 +107,7 @@
         </div>
         <div>
             <a href="http://www.bce.uem.br/" title="Novas aquisições da BCE." target="_blank">
-                <img align="right" src="manchete1.jpg" width="1110" height="463" alt="Banner UEM."/></a>
+                <img align="right" src="manchete.jpg" width="1090" height="463" alt="Banner UEM."/></a>
         </div>
     </section>
 </h:body>
