--- a/web/cadastrarLivro.xhtml
+++ b/web/cadastrarLivro.xhtml
@@ -3,8 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -102,38 +100,39 @@
             </h:form>
             <h:form id="dadosLivro">
                 <div class="form-group">
-                    <h:outputLabel value="Título" /><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.titulo}" class="form-control"
-                                 required="true"></h:inputText>
+                    <h:outputLabel value="Título"  /><font color="red">*</font>
+                    <p:inputText widgetVar="a" value="#{livroBean.livro.titulo}" class="form-control"
+                                 required="true" placeholder="Insira o título do livro"></p:inputText>
+
 
                     <h:outputLabel value="Autor"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.autor}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.autor}" class="form-control"
+                                 required="true" placeholder="Insira o nome do autor"></p:inputText>
 
                     <h:outputLabel value="Editora"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.editora}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.editora}" class="form-control"
+                                 required="true" placeholder="Insira o nome da editora"></p:inputText>
 
                     <h:outputLabel value="Ano Lançamento"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.anolancamento}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.anolancamento}" class="form-control"
+                                 required="true" placeholder="Insira o ano lançamento"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.cidade}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.cidade}" class="form-control"
+                                 required="true" placeholder="Insira a cidade"></p:inputText>
 
                     <h:outputLabel value="Volume"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.volume}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.volume}" class="form-control"
+                                 required="true" placeholder="Insira o volume"></p:inputText>
 
-                    <h:outputLabel value="Código Catalogação"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.codcatalogacao}" class="form-control"
-                                 required="true"></h:inputText>
+                    <h:outputLabel value="Código de Catalogação"/><font color="red">*</font>
+                    <p:inputText value="#{livroBean.livro.codcatalogacao}" class="form-control"
+                                 required="true" placeholder="Insira o código de catalogação"></p:inputText>
 
                     <h:outputLabel value="Número Chamada"/><font color="red">*</font>
-                    <h:inputText value="#{livroBean.livro.numchamada}" class="form-control"
-                                 required="true"></h:inputText>
+                    <p:inputText value="#{livroBean.livro.numchamada}" class="form-control"
+                                 required="true" placeholder="Insira o número de chamada"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
