--- a/web/gestaoBibliotecas.xhtml
+++ b/web/gestaoBibliotecas.xhtml
@@ -87,11 +87,11 @@
                 <h5 align="center">Acesso</h5><br></br>
                 <div class="form-group">
                     <h:outputLabel value="Usuário"/><br></br>
-                    <p:inputText value="#{loginBean.user.usuario}" class="form-control"/>
+                    <p:inputText value="#{loginBean.user.usuario}" class="form-control" placeholder="Usuário"/>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Senha"/><br></br>
-                    <p:password value="#{loginBean.user.senha}" class="form-control"/>
+                    <p:password value="#{loginBean.user.senha}" class="form-control" placeholder="Senha"/>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Login" class="btn btn-block btn-primary"
