--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -3,7 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
@@ -102,7 +101,7 @@
                     <h:form id="telaConsultaBibliotecario">
                         <div class="form-group">
                             <h:outputLabel value="Título"/>
-                            <h:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false"></h:inputText>
+                            <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false" placeholder="Insira o título do livro"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:commandButton value="Buscar" class="btn btn-block btn-primary"
