--- a/web/cadastrarLivro.xhtml
+++ b/web/cadastrarLivro.xhtml
@@ -101,7 +101,7 @@
             <h:form id="dadosLivro">
                 <div class="form-group">
                     <h:outputLabel value="Título"  /><font color="red">*</font>
-                    <p:inputText widgetVar="a" value="#{livroBean.livro.titulo}" class="form-control"
+                    <p:inputText value="#{livroBean.livro.titulo}" class="form-control"
                                  required="true" placeholder="Insira o título do livro"></p:inputText>
 
 
