--- a/web/deletarLivro.xhtml
+++ b/web/deletarLivro.xhtml
@@ -192,7 +192,7 @@
                         <div class="form-group">
                             <h:outputLabel value="Id do Livro"/><font color="red">*</font>
                             <p:inputText value="#{livroBean.livro.codlivro}" class="form-control"
-                                         required="false" placeholder="Insira o código Id do livro"></p:inputText>
+                                         required="true" placeholder="Insira o código Id do livro"></p:inputText>
                         </div>
                         <div id="conf" class="conf">
                             <p align="center">
